--- a/test/fixtures/locations.yml
+++ b/test/fixtures/locations.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  location: MyString
-
+ location: 014.09.18
+ 
 two:
-  location: MyString
+ location: 080.02.002
